--- a/bibtex/daftar-pustaka.bib
+++ b/bibtex/daftar-pustaka.bib
@@ -1,3 +1,123 @@
+@article{kadir2013pengolahan,
+  title={Pengolahan Citra Digital Dan Aplikasinya},
+  author={Kadir, Abdul and Susanto, Adhi},
+  journal={ANDI OFFSET. Yogyakarta},
+  year={2013}
+}
+
+@article{hidayat2020perbandingan,
+  title={Perbandingan Metode Canny, Prewitt, dan Sobel Pada Image Jenis-Jenis Alga Untuk Mendeteksi Tepi Citra},
+  author={Hidayat, Ari},
+  journal={JURIKOM (Jurnal Riset Komputer)},
+  volume={7},
+  number={4},
+  pages={477--481},
+  year={2020}
+}
+
+@article{yunus2012perbandingan,
+  title={Perbandingan metode-metode edge detection untuk proses segmentasi citra digital},
+  author={Yunus, Mahmud},
+  journal={Jurnal Teknologi Informasi: Teori, Konsep, dan Implementasi},
+  volume={3},
+  number={2},
+  pages={146--160},
+  year={2012}
+}
+
+@article{mulyanto2009teori,
+  title={Teori pengolahan citra digital},
+  author={Mulyanto, ST and Kom, M and Sutoyo, ST},
+  journal={Yogyakarta: Andi},
+  year={2009}
+}
+
+@article{khotijah2016perancangan,
+  title={Perancangan Database E-Learning Manajemen System untuk Pembelajaran pada Sekolah Menengah Pertama},
+  author={Khotijah, Siti},
+  journal={STRING (Satuan Tulisan Riset Dan Inovasi Teknologi)},
+  volume={1},
+  number={1},
+  year={2016}
+}
+
+@article{IPI1759345,
+title = "Pengolahan Citra Digital Deteksi Tepi Untuk Membandingkan Metode Sobel, Robert dan Canny",
+journal = "Lembaga Penelitian dan Pengabdian kepada Masyarakat Universitas Udayana",
+volume = "Vol. 2, No. 2, Agustus 2014",
+pages = "",
+year = "2014",
+url = https://ojs.unud.ac.id/index.php/merpati/article/view/17893/11623,
+author = "Ni Kadek Ayu Wirdiani; Putu Teguh Krisna Putra",
+abstract = "Pengolahan citra digital merupakan teknologi yang dapat dimanfaatkan dalam meningkatkan kualitas citra dan proses identifikasi citra untuk memperkaya informasi yang bersumber pada citra tersebut. Penulisan ini bertujuan untuk membandingkan metode deteksi tepi pada pengolahan citra digital. Deteksi tepi merupakan sebuah proses di mana proses tersebut berfungsi untukmendeteksi garis tepi yang membatasi dua wilayah citra. Deteksi tepiitu sendiri bertujuan untuk menandai bagian yang menjadi detail citra, dan memperbaikiserta mengubah citra. Penulisan ini membahas tentang perbandingan hasil deteksi tepi dengan metode Canny, Sobel dan Robert dengan menggunakan aplikasi Delphi 7. Perangkat lunak yang digunakan adalah Borland Delphi 7Enterprise sebagai bahasa pemrogramannya. Hasil dari perbandingan ketiga metode tersebut adalah metode Canny lebih baik dalam melakukan pengolahan kualitas citra untuk penghitungan deteksi tepi karena output dari metode Canny memiliki batas dan tepi yang lebih jelas. Kata Kunci: Pengolahan Citra, Deteksi Tepi, Canny, Sobel, Robert, Delphi 7",
+}
+@article{hayadi2017visualisasi,
+  title={Visualisasi Konsep Umum Sistem Pakar Berbasis Multimedia},
+  author={Hayadi, B Herawan},
+  journal={RJOCS (Riau Journal of Computer Science)},
+  volume={3},
+  number={1},
+  pages={17--22},
+  year={2017}
+}
+
+@article{munantri2020aplikasi,
+  title={Aplikasi Pengolahan Citra Digital Untuk Identifikasi Umur Pohon},
+  author={Munantri, Nadzir Zaid and Sofyan, Herry and Florestiyanto, Mangaras Yanu},
+  journal={Telematika: Jurnal Informatika dan Teknologi Informasi},
+  volume={16},
+  number={2},
+  pages={97--104},
+  year={2020}
+}
+
+@book{arsyad2015media,
+  author = {Arsyad, Azhar and Rahman, Asfah},
+  year = {2015},
+  title = {Media Pembelajaran},
+  editor = {Rahman, Asfah},
+  publisher = {Raja Grafindo Persada},
+  address = {Jakarta}
+}
+
+@article{nurrita2018pengembangan,
+  title={Pengembangan media pembelajaran untuk meningkatkan hasil belajar siswa},
+  author={Nurrita, Teni},
+  journal={Jurnal misykat},
+  volume={3},
+  number={1},
+  pages={171--187},
+  year={2018}
+}
+
+@article{suryadibrata2020visualisasi,
+    title = {Visualisasi Algoritma sebagai Sarana Pembelajaran K-Means Clustering},
+    author = {Suryadibrata, Alethea and Young, Julio Christian},
+    journal = {Ultimatics: Jurnal Teknik Informatika},
+    volume = {12},
+    number = {1},
+    pages = {25--29},
+    year = {2020}
+}
+
+@inproceedings{zarkasyi2015pengembangan,
+  title={Pengembangan Media Pembelajaran dengan GeoGebra untuk Visualisasi Penggunaan Integral pada Siswa SMA},
+  author={Zarkasyi, Chairun Nisa},
+  booktitle={Seminar Nasional Matematika dan Pendidikan Matematika UNY},
+  pages={283--290},
+  year={2015}
+}
+
+@article{maulana2021penerapan,
+  title={Penerapan Multimedia Development Life Cycle dalam Pengembangan Media Visualisasi Pembelajaran Interaktif},
+  author={Maulana, Agung and Kusdinar, Asep Budiman and Sunarto, Asril Adi},
+  journal={Jutisi: Jurnal Ilmiah Teknik Informatika dan Sistem Informasi},
+  volume={9},
+  number={3},
+  pages={25--32},
+  year={2021}
+}
+
 @BOOK{book:darma,
     AUTHOR  = "Darma Putra",
     TITLE = "Pengolahan Citra Digital",
@@ -220,8 +340,8 @@
 
 @INPROCEEDINGS{pdf:chang,
     author={Andre Xian Ming Chang and Eugenio Culurciello},
-    booktitle={2017 IEEE International Symposium on Circuits and Systems (ISCAS)}, 
-    title={Hardware accelerators for recurrent neural   networks on FPGA}, 
+    booktitle={2017 IEEE International Symposium on Circuits and Systems (ISCAS)},
+    title={Hardware accelerators for recurrent neural   networks on FPGA},
     year={2017},
     volume={},
     number={},
@@ -245,11 +365,11 @@
     series = {FPGA '18}
 }
 
-@INPROCEEDINGS{lb:asano,  
-    author= "Shuichi Asano and Tsutomu Maruyama and Yoshiki Yamaguchi",  
-    booktitle={2009 International Conference on Field Programmable Logic and Applications},   
-    title={Performance comparison of FPGA, GPU and CPU in image processing},   
-    year={2009},  
-    pages={126-131},  
+@INPROCEEDINGS{lb:asano,
+    author= "Shuichi Asano and Tsutomu Maruyama and Yoshiki Yamaguchi",
+    booktitle={2009 International Conference on Field Programmable Logic and Applications},
+    title={Performance comparison of FPGA, GPU and CPU in image processing},
+    year={2009},
+    pages={126-131},
     doi={10.1109/FPL.2009.5272532}
 }
