--- a/include/bab1.tex
+++ b/include/bab1.tex
@@ -1,6 +1,60 @@
 \chapter{PENDAHULUAN}
 
 \section{Latar Belakang}
+Pengolahan citra digital telah menjadi bidang yang semakin penting dalam era digital ini. Dalam berbagai bidang seperti ilmu komputer, grafika komputer, pengenalan pola, penglihatan komputer, dan banyak aplikasi lainnya, pengolahan citra digital berperan penting dalam analisis, manipulasi, dan interpretasi gambar digital.
 
-\blindtext 
-\cite{book:darma}
+Pada saat yang sama, perkembangan teknologi informasi dan komunikasi (TIK) telah membawa dampak signifikan dalam dunia pendidikan. Pemanfaatan media pembelajaran dalam proses pendidikan telah menjadi semakin umum, dan penggunaan media berbasis web menjadi salah satu tren yang semakin populer. Media berbasis web memiliki keunggulan dalam aksesibilitas dan fleksibilitasnya yang tinggi, yang memungkinkan mahasiswa untuk mengakses dan berinteraksi dengan materi pembelajaran secara efektif.
+
+Dalam konteks ini, penelitian ini bertujuan untuk mengembangkan sebuah media pembelajaran pengolahan citra digital yang menggunakan visualisasi interaktif berbasis web. Dengan memanfaatkan potensi media berbasis web, penelitian ini bertujuan untuk menyediakan alat yang interaktif dan dinamis bagi mahasiswa untuk belajar dan mengajarkan konsep pengolahan citra digital secara lebih efektif.
+
+Media pembelajaran yang diusulkan akan memberikan visualisasi yang menarik dan interaktif untuk membantu pemahaman konsep-konsep dasar dalam pengolahan citra digital. Mahasiswa akan dapat berinteraksi dengan gambar dan algoritma pengolahan citra, memanipulasi parameter, dan melihat hasil transformasi citra secara langsung melalui antarmuka berbasis web yang ramah pengguna.
+
+Dengan adanya media pembelajaran ini, diharapkan siswa akan lebih terlibat dan tertarik dalam proses pembelajaran pengolahan citra digital. Selain itu, dosen juga akan mendapatkan alat yang berguna untuk mengajarkan konsep-konsep ini dengan cara yang lebih menarik dan mudah dipahami.
+
+Penelitian ini diharapkan dapat memberikan kontribusi dalam pengembangan media pembelajaran yang inovatif dan interaktif dalam bidang pengolahan citra digital. Dengan meningkatkan kualitas pembelajaran di bidang ini, diharapkan dapat mempersiapkan mahasiswa untuk menghadapi tantangan dan peluang di dunia yang semakin digital.
+
+\section{Identifikasi Masalah}
+Berikut adalah beberapa identifikasi masalah yang dapat diambil dari latar belakang di atas:
+
+\begin{enumerate}
+  \item Saat ini, masih terbatasnya media pembelajaran berbasis web yang interaktif dalam pengolahan citra digital.
+  \item  Kurangnya aksesibilitas dan fleksibilitas. Beberapa media pembelajaran pengolahan citra digital mungkin hanya tersedia dalam bentuk cetak atau terbatas pada platform tertentu.
+  \item Pengolahan citra digital melibatkan konsep-konsep yang kompleks dan abstrak.
+\end{enumerate}
+
+\section{Rumusan Masalah}
+Berdasarkan latar belakang di atas, maka dapat dirumuskan masalah utama dari proposal tugas akhir ini sebagai berikut:
+
+Bagaimana mengembangkan media pembelajaran pengolahan citra digital yang lebih interaktif dan mudah dipahami oleh mahasiswa dengan memanfaatkan teknologi web dan visualisasi interaktif?
+
+Untuk menjawab masalah tersebut, diperlukan beberapa pertanyaan penelitian yang lebih spesifik, yaitu:
+
+\begin{enumerate}
+    \item Apa saja konsep-konsep dasar yang harus dipahami oleh mahasiswa dalam pembelajaran pengolahan citra digital?
+    \item Bagaimana mengembangkan media pembelajaran pengolahan citra digital yang interaktif dan mudah dipahami dengan memanfaatkan teknologi web dan visualisasi interaktif?
+    \item Bagaimana mengukur efektivitas media pembelajaran yang telah dikembangkan?
+    \item Bagaimana tingkat kepuasan mahasiswa terhadap penggunaan media pembelajaran yang dikembangkan?
+\end{enumerate}
+
+\section{Batasan Masalah}
+
+Dalam penelitian ini, terdapat beberapa batasan masalah yang perlu diperhatikan. Batasan-batasan tersebut adalah:
+
+\begin{enumerate}
+    \item Penelitian ini akan difokuskan pada pengolahan citra digital sebagai subjek utama dalam media pembelajaran yang diusulkan. Lingkup pengolahan citra digital meliputi konsep segmentasi seperti operator \textit{Roberts}, operator \textit{Prewitt}, operator \textit{Sobel}, operator \textit{Laplacian} dan operator \textit{Canny}.
+    \item Media pembelajaran akan dikembangkan dalam bentuk aplikasi berbasis web sehingga dapat diakses dengan mudah melalui berbagai perangkat.
+    \item Aplikasi media pembelajaran yang dikembangkan akan memiliki beberapa fungsi dan fitur, seperti tampilan interaktif, kontrol dan manipulasi citra, dan pemrosesan citra secara \textit{real-time}.
+    \item Pengembangan media pembelajaran pengolahan citra digital dengan visualisasi interaktif berbasis web ini akan dilakukan dalam waktu tertentu, sehingga batasan waktu pengembangan akan menjadi salah satu batasan yang harus diperhatikan dalam tugas akhir ini.
+\end{enumerate}
+
+\section{Tujuan Penelitian}
+Tujuan dari penelitian tugas akhir ini adalah untuk mengembangkan media pembelajaran yang lebih interaktif dan mudah dipahami dengan memanfaatkan teknologi web dan visualisasi interaktif. Selain itu, penelitian ini juga bertujuan untuk meningkatkan kualitas pembelajaran pengolahan citra digital dan mempermudah mahasiswa dalam memahami konsep-konsep yang kompleks dan abstrak. Tujuan akhir dari penelitian ini adalah memberikan sumbangsih yang positif bagi dunia pendidikan dan pengembangan teknologi informasi dan komunikasi.
+
+\section{Manfaat Penelitian}
+Berikut adalah beberapa manfaat yang dapat diperoleh melalui penelitian tugas akhir ini:
+\begin{enumerate}
+    \item Dengan adanya media pembelajaran yang lebih interaktif dan mudah dipahami, diharapkan kualitas pembelajaran pengolahan citra digital dapat meningkat.
+    \item Membantu mahasiswa memahami konsep-konsep yang kompleks dan abstrak. Dengan adanya media pembelajaran ini diharapkan dapat membantu mahasiswa dalam memahami konsep-konsep tersebut.
+    \item Media pembelajaran yang saat ini digunakan masih terbatas dan belum banyak memanfaatkan teknologi terkini. Dengan adanya media pembelajaran yang memanfaatkan teknologi web dan visualisasi interaktif, diharapkan dapat memberikan alternatif media pembelajaran yang lebih modern.
+    \item Penelitian ini diharapkan dapat memberikan sumbangsih positif bagi dunia pendidikan dan pengembangan teknologi informasi dan komunikasi. Dengan adanya media pembelajaran yang lebih inovatif dan efektif, diharapkan dapat membantu meningkatkan kualitas pendidikan dan pengembangan teknologi informasi dan komunikasi.
+\end{enumerate}
