--- a/include/bab3.tex
+++ b/include/bab3.tex
@@ -1,1 +1,69 @@
-\chapter{METODE PENENILITIAN}
+\chapter{METODOLOGI PENENILITIAN}
+\section{Metode Penelitian}
+\subsection{Metode Pengumpulan Data}
+
+Dalam penelitian ini, metode pengumpulan data yang digunakan meliputi studi pustaka, wawancara, dan observasi. Ketiga metode ini akan memberikan kontribusi yang beragam dalam mendapatkan informasi yang diperlukan untuk penelitian.
+
+\begin{enumerate}[leftmargin=1cm, itemindent=0.6cm,labelwidth=15pt, labelsep=5pt, listparindent=1cm,align=left]
+
+    \item Studi Pustaka
+
+    Studi pustaka merupakan metode yang penting dalam proses penelitian ini. Melalui studi pustaka, peneliti akan mengumpulkan informasi dari sumber-sumber yang relevan, seperti buku dan jurnal ilmiah. Dalam konteks pengembangan media pembelajaran pengolahan citra digital menggunakan visualisasi interaktif berbasis web, studi pustaka akan memberikan pemahaman yang mendalam tentang konsep pengolahan citra digital, prinsip-prinsip desain pembelajaran, dan teknologi terkait pengembangan aplikasi web.
+
+    \item Wawancara
+
+    Metode wawancara akan digunakan untuk mendapatkan perspektif dan informasi dari para ahli dalam bidang pengolahan citra digital. Wawancara akan dilakukan dengan para akademisi atau praktisi yang memiliki pengetahuan dan pengalaman dalam pengolahan citra digital. Pertanyaan-pertanyaan terkait dengan konsep pengolahan citra digital, penggunaan visualisasi interaktif dalam pembelajaran, tantangan yang dihadapi dalam pengembangan media pembelajaran, dan saran atau rekomendasi akan diajukan kepada responden.
+
+    \item Obervasi
+
+    Metode observasi dilakukan dengan mengamati penggunaan media pembelajaran yang ada atau situasi pembelajaran yang terkait dengan pengolahan citra digital. Observasi dilakukan secara langsung untuk melihat bagaimana mahasiswa berinteraksi dengan materi pembelajaran, sejauh mana mereka memahami konsep-konsep pengolahan citra digital, serta kendala atau masalah yang mungkin timbul selama proses pembelajaran. Observasi ini dilakukan dalam lingkungan kelas atau laboratorium komputer.
+
+\end{enumerate}
+
+\subsection{Metode Pengembangan Aplikasi}
+Metode pengembangan aplikasi yang akan digunakan dalam penelitian ini adalah metode waterfall. Metode waterfall adalah salah satu pendekatan pengembangan perangkat lunak yang terstruktur dan linear, di mana setiap fase pengembangan dilakukan secara berurutan dan tidak ada overlap antar fase. Berikut adalah tahapan-tahapan pengembangan aplikasi menggunakan metode waterfall:
+
+\begin{enumerate}[leftmargin=1cm, itemindent=0.6cm,labelwidth=15pt, labelsep=5pt, listparindent=1cm,align=left]
+
+    \item Analisis Kebutuhan
+
+    Tahap analisis kebutuhan dilakukan untuk memahami secara mendalam kebutuhan pengguna dan tujuan dari pengembangan aplikasi. Pada tahap ini, dilakukan identifikasi kebutuhan pengolahan citra digital yang perlu disajikan dalam media pembelajaran berbasis web. Analisis kebutuhan ini melibatkan wawancara dengan para pengguna potensial dan pengumpulan informasi terkait konsep-konsep pengolahan citra digital yang penting.
+
+    \item Perancangan
+
+    Setelah kebutuhan dianalisis, tahap perancangan dilakukan untuk merancang struktur dan fungsionalitas media pembelajaran. Pada tahap ini, dilakukan perancangan antarmuka pengguna, aliran informasi, dan navigasi aplikasi. Perancangan ini juga melibatkan pemilihan algoritma pengolahan citra yang akan digunakan dalam media pembelajaran.
+
+    \item Implementasi
+    Tahap implementasi melibatkan pembuatan kode program berdasarkan perancangan yang telah disusun sebelumnya. Pada tahap ini, dilakukan pengembangan aplikasi berbasis web yang mendukung pengolahan citra digital dan visualisasi interaktif. Algoritma pengolahan citra yang dipilih akan diimplementasikan dalam kode program yang sesuai.
+
+    \item Pengujian
+
+    Setelah tahap implementasi, tahap pengujian dilakukan untuk memastikan bahwa aplikasi berfungsi dengan baik dan memenuhi kebutuhan pengguna. Pengujian dilakukan dengan menggunakan berbagai contoh kasus dan skenario untuk memverifikasi kinerja dan keakuratan media pembelajaran. Jika terdapat kesalahan atau kekurangan, perbaikan akan dilakukan pada tahap ini.
+
+\item Pemeliharaan
+
+    Setelah aplikasi diimplementasikan dan diuji, langkah selanjutnya adalah pemeliharaan. Tahap pemeliharaan melibatkan pemantauan kinerja aplikasi secara berkala dan memperbaiki masalah yang muncul setelah aplikasi berada dalam lingkungan produksi. Pemeliharaan juga mencakup penambahan fitur baru atau perubahan fungsionalitas sesuai dengan kebutuhan yang berkembang dari pengguna.
+
+\end{enumerate}
+
+Metode waterfall memberikan pendekatan yang terstruktur dan terurut dalam pengembangan aplikasi. Setiap tahap harus diselesaikan dengan baik sebelum melanjutkan ke tahap berikutnya. Pendekatan ini memastikan bahwa setiap fase pengembangan dapat diselesaikan dengan baik sebelum melanjutkan ke fase berikutnya, sehingga mengurangi risiko perubahan yang tidak terduga.
+
+\section{alat dan behan penelitian}
+\subsection{Spesifikasi Perangkat Keras(\textit{Hardware})}
+    Perangkat keras (hardware) yang digunakan dalam pembangunan aplikasi media pebelajaran yang dibuat adalah sebagai berikut:
+\begin{enumerate}
+    \item \textit{Procesor AMD Ryzen 7 47000U with Raden Graphics 2.00 GHz}
+    \item SSD 512 GB
+    \item RAM 8 GB
+\end{enumerate}
+
+\subsection{Spesifikasi Perangkat Lunak(\textit{Software})}
+    Perangkat Lunak (\textit{software}) yang digunakan dalam pembangunan aplikasi lowongan kerja yang dibangun adalah sebagai berikut:
+
+\begin{enumerate}
+    \item Sistem Operasi : Arch Linux
+    \item Bahasa Pemrograman : Javascript
+    \item Framework : Bootstrap
+    \item Aplikasi desain logika program : draw.io
+    \item Code Editor : Visual Studio Code
+\end{enumerate}
