--- a/seminar-proposal.tex
+++ b/seminar-proposal.tex
@@ -1,46 +1,43 @@
 \documentclass{lib/skripsi}
 
 \usepackage{blindtext}
-
 %===========================================================
 % Definisi Data Peneliti, Judul, Pembimbing dan Penguji
 %-----------------------------------------------------------
-\titleskripsi{IMPLEMENTASI FILTER SPASIAL LINEAR PADA VIDEO \textit{STREAM} MENGGUNAKAN \textit{FPGA HARDWARE ACCELERATOR}}
+\typedocument{proposal skripsi}
+\titleskripsi{MEDIA PEMBELAJARAN PENGOLAHAN CITRA DIGITAL MENGGUNAKAN VISUALISASI INTERAKTIF BERBASIS WEB}
 
-\fullname{SULAEMAN}
-\idnum{H131 16 002}
+\fullname{RAHMAT ARDIANSYAH}
+\npm{193510147}
 
-\yearsubmit{2020}
-\program{Ilmu Komputer}
-\dept{Matematika}
-\faculty{Matematika dan Ilmu Pengetahuan Alam}
-\university{Universitas Hasanuddin}
-\city{Makassar}
+\yearsubmit{2023}
+\program{Teknik Informatika}
+\faculty{Teknik}
+\university{Universitas Islam Riau}
+\city{Pekanbaru}
 
-\firstsupervisor{Dr. Eng. Armin Lawi, S.Si., M.Eng.}
-\secondsupervisor{Dr. Diaraya, M.Ak.}
-\firstexaminer{ Dr. Hendra, S.Si., M.Kom.}
-\secondexaminer{ Nur Hilal A Syahrir, S.Si., M.Si.}
 %-----------------------------------------------------------
 % End Definisi Data Peneliti, Judul, Pembimbing dan Penguji
 %===========================================================
 
 \begin{document}
-    \noindent
-    \textit{Seminar I}
     \coverproposal
     \pagenumbering{roman}
-    
+
     %===========================================================
-    % Daftar isi, daftar gambar, daftar tabel
+    % Kata Pengantar, Daftar isi, daftar gambar, daftar tabel
     %-----------------------------------------------------------
+    \frenchspacing
+    \input{include/kata-pengantar.tex}
+    \pagebreak
+
     \addcontentsline{toc}{chapter}{DAFTAR ISI}
     \tableofcontents
     \pagebreak
 
-    \addcontentsline{toc}{chapter}{DAFTAR TABEL}
-    \listoftables
-    \pagebreak
+    % \addcontentsline{toc}{chapter}{DAFTAR TABEL}
+    % \listoftables
+    % \pagebreak
 
     \addcontentsline{toc}{chapter}{DAFTAR GAMBAR}
     \listoffigures
